<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:title="@string/change_background"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_DarkLight"
        android:title="@string/dark_light_action_bar_setting_text"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_Dark"
                android:title="@string/dark_mode"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_Light"
                android:title="@string/light_mode"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>