<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:flow_horizontalAlign="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/start"
        android:contentDescription="@string/onboard_start_page_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/onboard_start_page_title"
        android:textAlignment="center"
        android:textColor="@color/md_theme_dark_surfaceTint"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/startDesc"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/md_theme_light_surfaceTint"
        android:textSize="17sp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/get_started"
        android:padding="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        app:cornerRadius = "12dp"/>

</LinearLayout>