<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationActivity">

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius = "15dp"
        android:padding="8dp"
        android:drawableEnd="@drawable/ic_baseline_skip_next_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="341dp"
        android:layout_height="498dp"
        android:layout_marginVertical="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/back"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        android:textColor="@color/md_theme_dark_surfaceTint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="16sp"
        android:background="#00000000"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/md_theme_dark_surfaceTint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/dotIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/slideViewPager">

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>